@@ -2,6 +2,13 @@ Changelog for Statocles
 
 {{ $NEXT }}
 
+    [Added]
+
+    - Added `disable_content_template` attribute to document,
+      application, and site objects. This allows a site to disable
+      content template processing (in the rare case where the template
+      processing is confused by the content).
+
 0.085     2017-09-08 02:25:01-05:00 America/Chicago
 
     [Added]
